# QHyper

./: .gitignore  .readthedocs.yaml  .demowynikirobprobability_step3.csv  .demowynikirobprobability_step4.csv  .demowynikirobprobability_step5.csv  .demowynikirobprobability_step6.csv  .demowynikirobprobability_steprr1.csv  .demowynikirobprobability_steprr2.csv  CEM.ipynb  CEM_optimizer_pennylane.py  LICENSE.txt  QAOA_knapsack.ipynb  QAOA_knapsack_pennylane.ipynb  QAOA_pennylane_maxcut.ipynb  README.md  README.rst  bare_test.py  bare_test_advantage.py  bare_test_gurobi.py  bare_test_pennylane.py  demo  demo.ipynb  historia.csv  justyna.ipynb  main.ipynb  mainv2.ipynb  mypy.ini  probability_step1.csv  probability_step10.csv  probability_step13.csv  probability_step14.csv  probability_step19.csv  probability_step2.csv  probability_step22.csv  probability_step23.csv  probability_step24.csv  probability_step26.csv  probability_step27.csv  probability_step28.csv  probability_step29.csv  (+22 more)
CEM_optimizer/: CEM.py  Knapsack.py  TSP.py  parser.py  problem.py
QAOA/: problem_solver.py
QHyper/: __init__.py  constraint.py  converter.py  parser.py  polynomial.py  util.py
custom1/: test.py
demo/: Knapsack_to_DQM.ipynb  QHyper  Simplified_binary_workflow_without_slacks.ipynb  Simplified_binary_workflow_without_slacks_z_maina.ipynb  Simplified_problem_with_inequality_constraints.ipynb  Simplified_workflow_without_slacks.ipynb  Solving_WfCommons_workflows.ipynb  Workflows.ipynb  Workflows_to_QUBO.ipynb  bcd_demo.ipynb  bcdp_dict_demo.py  bcdp_dummies_gurobi_demo.py  (+56 more)
(+425 files in other folders)
